add missing var in docker exec

--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -286,8 +286,8 @@ jobs:
       - name: Install Requirements for WebUI & Test
         if: matrix.test-suite == 'webui'
         run: |
-          docker exec sed -i 's/KEEP_GOING=1/KEEP_GOING=0/g' stable-diffusion-webui/webui.sh
-          docker exec -e venv_dir=- bash webui.sh
+          docker exec ${{ env.CONTAINER_NAME }} sed -i 's/KEEP_GOING=1/KEEP_GOING=0/g' stable-diffusion-webui/webui.sh
+          docker exec -e venv_dir=- ${{ env.CONTAINER_NAME }} bash webui.sh
 
       - name: Start WebUI Web Service
         if: matrix.test-suite == 'webui'
