--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -286,15 +286,15 @@ jobs:
       - name: Install Requirements for WebUI & Test
         if: matrix.test-suite == 'webui'
         run: |
-          docker exec ${{ env.CONTAINER_NAME }} sed -i 's/KEEP_GOING=1/KEEP_GOING=0/g' stable-diffusion-webui/webui.sh
-          docker exec -e venv_dir=- ${{ env.CONTAINER_NAME }} bash stable-diffusion-webui/webui.sh -f
           docker exec ${{ env.CONTAINER_NAME }} python3 -m pip config set global.index-url https://pypi.tuna.tsinghua.edu.cn/simple
           docker exec ${{ env.CONTAINER_NAME }} python3 -m pip install pytorch-lightning gradio
 
       - name: Start WebUI Web Service
         if: matrix.test-suite == 'webui'
         run: |
-          docker exec -w /app/stable-diffusion-webui -d ${{ env.CONTAINER_NAME }} sh -c "python3 /app/stable-diffusion-webui/webui.py --port 7860 --api --no-download-sd-model --do-not-download-clip --disable-safe-unpickle --ckpt-dir /share_nfs/onediff_ci/sd-webui/models > /app/stable-diffusion-webui/onediff_webui.log 2>&1"
+          docker exec -d ${{ env.CONTAINER_NAME }} mkdir /app/stable-diffusion-webui/.git
+          docker exec -e venv_dir=- -w /app/stable-diffusion-webui -d ${{ env.CONTAINER_NAME }} sh -c "bash /app/stable-diffusion-webui/webui.sh -f --port 7860 --api --no-download-sd-model --do-not-download-clip --disable-safe-unpickle --ckpt-dir /share_nfs/onediff_ci/sd-webui/models --skip-version-check" > /app/stable-diffusion-webui/onediff_webui.log 2>&1"
+          # docker exec -w /app/stable-diffusion-webui -d ${{ env.CONTAINER_NAME }} sh -c "python3 /app/stable-diffusion-webui/webui.py --port 7860 --api --no-download-sd-model --do-not-download-clip --disable-safe-unpickle --ckpt-dir /share_nfs/onediff_ci/sd-webui/models > /app/stable-diffusion-webui/onediff_webui.log 2>&1"
           sleep 30
 
       - name: Show WebUI Log
