--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -287,7 +287,8 @@ jobs:
         if: matrix.test-suite == 'webui'
         run: |
           docker exec ${{ env.CONTAINER_NAME }} python3 -m pip config set global.index-url https://pypi.tuna.tsinghua.edu.cn/simple
-          docker exec ${{ env.CONTAINER_NAME }} python3 -m pip install pytorch-lightning gradio clip open_clip_torch diskcache gitpython
+          docker exec ${{ env.CONTAINER_NAME }} python3 -m pip install pytorch-lightning gradio==3.41.2 clip open_clip_torch diskcache gitpython pytorch_lightning==1.9.4 scikit-image jsonmerge pillow-avif-plugin torchdiffeq torchsde clean-fid resize-right lark tomesd blendmodes facexlib opencv-python==4.8.0.74
+
 
       - name: Start WebUI Web Service
         if: matrix.test-suite == 'webui'
