--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -290,14 +290,14 @@ jobs:
           docker exec ${{ env.CONTAINER_NAME }} python3 -m pip install pytorch-lightning gradio==3.41.2 clip open_clip_torch diskcache gitpython pytorch_lightning==1.9.4 scikit-image jsonmerge pillow-avif-plugin torchdiffeq torchsde clean-fid resize-right lark tomesd blendmodes facexlib opencv-python==4.8.0.74 piexif inflection ftfy regex tqdm pydantic==1.10.13
           # docker exec ${{ env.CONTAINER_NAME }} python3 -m pip install git+https://github.com/openai/CLIP.git
           docker exec ${{ env.CONTAINER_NAME }} python3 -m pip install -e /app/stable-diffusion-webui/repositories/CLIP
-          docker exec -w /src/onediff/ ${{ env.CONTAINER_NAME }} python3 -m pip install -e /src/onediff
+          # docker exec -w /src/onediff/ ${{ env.CONTAINER_NAME }} python3 -m pip install -e /src/onediff
           # docker exec -d ${{ env.CONTAINER_NAME }} ls -ahl >> /app/stable-diffusion-webui/onediff_webui.log
 
       - name: Start WebUI Web Service
         if: matrix.test-suite == 'webui'
         run: |
           # docker exec -w /app/stable-diffusion-webui -d ${{ env.CONTAINER_NAME }} ls -ahl > /app/stable-diffusion-webui/onediff_webui.log
-          docker exec -d ${{ env.CONTAINER_NAME }} git config --global --add safe.directory '/app/stable-diffusion-webui/repositories/*'
+          # docker exec -d ${{ env.CONTAINER_NAME }} git config --global --add safe.directory '/app/stable-diffusion-webui/repositories/*'
           docker exec -d ${{ env.CONTAINER_NAME }} mkdir /app/stable-diffusion-webui/.git /app/stable-diffusion-webui/openai
           docker exec -d ${{ env.CONTAINER_NAME }} ln -s /share_nfs/onediff_ci/sd-webui/models/clips/clip-vit-large-patch14 /app/stable-diffusion-webui/openai/clip-vit-large-patch14
           # docker exec -e venv_dir=- -w /app/stable-diffusion-webui -d ${{ env.CONTAINER_NAME }} sh -c "bash /app/stable-diffusion-webui/webui.sh -f --port 7860 --api --no-download-sd-model --do-not-download-clip --disable-safe-unpickle --ckpt-dir /share_nfs/onediff_ci/sd-webui/models --skip-version-check >> /app/stable-diffusion-webui/onediff_webui.log 2>&1"
