--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -275,22 +275,20 @@ jobs:
       - name: Start WebUI Web Service
         if: matrix.test-suite == 'webui'
         run: |
+          # prepare env for sd-webui
           docker exec -d ${{ env.CONTAINER_NAME }} mkdir /app/stable-diffusion-webui/.git /app/stable-diffusion-webui/openai
           docker exec -d ${{ env.CONTAINER_NAME }} ln -s /share_nfs/onediff_ci/sd-webui/models/clips/clip-vit-large-patch14 /app/stable-diffusion-webui/openai/clip-vit-large-patch14
           docker exec -w /app/stable-diffusion-webui -d ${{ env.CONTAINER_NAME }} sh -c "python3 /app/stable-diffusion-webui/webui.py --port 7860 --api --no-download-sd-model --do-not-download-clip --disable-safe-unpickle --ckpt-dir /share_nfs/onediff_ci/sd-webui/models --skip-version-check > /app/stable-diffusion-webui/onediff_webui.log 2>&1"
-          sleep 300
+          sleep 30
 
-      # print to check if webui is launched successfully
       - run: docker exec ${{ env.CONTAINER_NAME }} ps aux
 
       - if: matrix.test-suite == 'webui'
         run: docker exec ${{ env.CONTAINER_NAME }} python3 -m pytest -v -s tests/sd-webui/test_api.py
-        continue-on-error: true
 
       - name: Show WebUI Log
         if: matrix.test-suite == 'webui'
-        run: |
-          docker exec ${{ env.CONTAINER_NAME }} cat /app/stable-diffusion-webui/onediff_webui.log
+        run: docker exec ${{ env.CONTAINER_NAME }} cat /app/stable-diffusion-webui/onediff_webui.log
 
       - name: Shutdown docker for ComfyUI Test
         if: matrix.test-suite == 'comfy'
