prepare env from local filesystem

--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -48,6 +48,70 @@ jobs:
         with:
           repository: comfyanonymous/ComfyUI
           path: ComfyUI
+
+      - name: Checkout Stable Diffusion WebUI
+        uses: actions/checkout@v4
+        with:
+          repository: AUTOMATIC1111/stable-diffusion-webui
+          path: stable-diffusion-webui
+
+      - name: Checkout openai CLIP
+        uses: actions/checkout@v4
+        with:
+          repository: openai/CLIP
+          path: stable-diffusion-webui/repositories/CLIP
+          ref: d50d76daa670286dd6cacf3bcd80b5e4823fc8e1
+
+      - name: Checkout open clip
+        uses: actions/checkout@v4
+        with:
+          repository: mlfoundations/open_clip
+          path: stable-diffusion-webui/repositories/open_clip
+          ref: bb6e834e9c70d9c27d0dc3ecedeebeaeb1ffad6b
+
+      - name: Checkout assets
+        uses: actions/checkout@v4
+        with:
+          repository: AUTOMATIC1111/stable-diffusion-webui-assets
+          path: stable-diffusion-webui/repositories/stable-diffusion-webui-assets
+
+      - name: Checkout Stability-AI stablediffusion
+        uses: actions/checkout@v4
+        with:
+          repository: Stability-AI/stablediffusion
+          path: stable-diffusion-webui/repositories/stable-diffusion-stability-ai
+
+      - name: Checkout Stability-AI/generative-models
+        uses: actions/checkout@v4
+        with:
+          repository: Stability-AI/generative-models
+          path: stable-diffusion-webui/repositories/generative-models
+
+      - name: Checkout crowsonkb/k-diffusion
+        uses: actions/checkout@v4
+        with:
+          repository: crowsonkb/k-diffusion
+          path: stable-diffusion-webui/repositories/k-diffusion
+
+      - name: Checkout BLIP
+        uses: actions/checkout@v4
+        with:
+          repository: salesforce/BLIP
+          path: stable-diffusion-webui/repositories/BLIP
+
+      - name: Checkout CLIP
+        uses: actions/checkout@v4
+        with:
+          repository: openai/CLIP
+          path: stable-diffusion-webui/repositories/CLIP
+
+      - name: Checkout openclip
+        uses: actions/checkout@v4
+        with:
+          repository: mlfoundations/open_clip
+          path: stable-diffusion-webui/repositories/open_clip
+
+
       - name: Pack src
         working-directory: onediff
         run: |
@@ -65,7 +129,8 @@ jobs:
         run: |
           git reset --hard
           git clean -f
-          git archive --prefix ${{ env.WEBUI_SRC_DIR }}/ --format zip HEAD > webui-src.zip
+          zip -r webui-src.zip
+          # git archive --prefix ${{ env.WEBUI_SRC_DIR }}/ --format zip HEAD > webui-src.zip
       - name: Upload src
         id: upload_to_oss
         run: |
@@ -127,7 +192,7 @@ jobs:
         if: matrix.test-suite == 'webui' && github.repository == 'siliconflow/onediff'
         run: |
           $HOME/ossutil64 cp ${{ needs.upload_src.outputs.webui_src_url }} .
-          unzip -o $(basename ${{ needs.upload_src.outputs.webui_src_url }})
+          unzip -o $(basename ${{ needs.upload_src.outputs.webui_src_url }}) -d stable-diffusion-webui
       - name: Checkout
         if: github.repository != 'siliconflow/onediff'
         uses: actions/checkout@v4
@@ -137,19 +202,12 @@ jobs:
         with:
           repository: comfyanonymous/ComfyUI
           path: ${{ env.COMFYUI_SRC_DIR }}
-
       - name: Checkout Stable Diffusion WebUI
         if: matrix.test-suite == 'webui' && github.repository != 'siliconflow/onediff'
         uses: actions/checkout@v4
         with:
           repository: AUTOMATIC1111/stable-diffusion-webui
           path: ${{ env.WEBUI_SRC_DIR }}
-        run: |
-          # disable webui service launching
-          docker exec ${{ env.CONTAINER_NAME }} sed -i 's/start()/#start()/g' launch.py
-          # prepare webui env
-          docker exec -e venv_dir=- ${{ env.CONTAINER_NAME }} bash webui.sh --no-download-sd-model --do-not-download-clip --skip-version-check
-
       - name: Clean docker containers
         run: |
           docker rm -f ${{ env.CONTAINER_NAME }} || true
@@ -290,8 +348,8 @@ jobs:
         if: matrix.test-suite == 'webui'
         run: |
           docker exec ${{ env.CONTAINER_NAME }} python3 -m pip config set global.index-url https://pypi.tuna.tsinghua.edu.cn/simple
-          docker exec ${{ env.CONTAINER_NAME }} python3 -m pip install pytorch-lightning gradio==3.41.2 clip open_clip_torch diskcache gitpython pytorch_lightning==1.9.4 scikit-image jsonmerge pillow-avif-plugin torchdiffeq torchsde clean-fid resize-right lark tomesd blendmodes facexlib opencv-python==4.8.0.74 piexif inflection ftfy regex tqdm pydantic==1.10.13
-          docker exec ${{ env.CONTAINER_NAME }} python3 -m pip install -e /app/stable-diffusion-webui/repositories/CLIP
+          docker exec ${{ env.CONTAINER_NAME }} python3 -m pip install pytorch-lightning gradio==3.41.2 diskcache gitpython pytorch_lightning==1.9.4 scikit-image jsonmerge pillow-avif-plugin torchdiffeq torchsde clean-fid resize-right lark tomesd blendmodes facexlib opencv-python==4.8.0.74 piexif inflection ftfy regex tqdm pydantic==1.10.13
+          # docker exec ${{ env.CONTAINER_NAME }} python3 -m pip install -e /app/stable-diffusion-webui/repositories/CLIP
 
       - name: Start WebUI Web Service
         if: matrix.test-suite == 'webui'
@@ -299,8 +357,17 @@ jobs:
           # prepare env for sd-webui
           docker exec -d ${{ env.CONTAINER_NAME }} mkdir /app/stable-diffusion-webui/.git /app/stable-diffusion-webui/openai
           docker exec -d ${{ env.CONTAINER_NAME }} ln -s /share_nfs/onediff_ci/sd-webui/models/clips/clip-vit-large-patch14 /app/stable-diffusion-webui/openai/clip-vit-large-patch14
-          docker exec -w /app/stable-diffusion-webui -d ${{ env.CONTAINER_NAME }} sh -c "python3 /app/stable-diffusion-webui/webui.py --port 7860 --api --no-download-sd-model --do-not-download-clip --disable-safe-unpickle --ckpt-dir /share_nfs/onediff_ci/sd-webui/models --skip-version-check > /app/stable-diffusion-webui/onediff_webui.log 2>&1"
+          # docker exec -w /app/stable-diffusion-webui -d ${{ env.CONTAINER_NAME }} sh -c "python3 /app/stable-diffusion-webui/webui.py --port 7860 --api --no-download-sd-model --do-not-download-clip --disable-safe-unpickle --ckpt-dir /share_nfs/onediff_ci/sd-webui/models --skip-version-check > /app/stable-diffusion-webui/onediff_webui.log 2>&1"
+          docker exec -e venv_dir=- ${{ env.CONTAINER_NAME }} bash webui.sh --api --no-download-sd-model --do-not-download-clip --skip-version-check --disable-safe-unpickle --ckpt-dir /share_nfs/onediff_ci/sd-webui/models
           sleep 300
+        env:
+          CLIP_PACKAGE: "git+file:///app/stable-diffusion-webui/repositories/CLIP"
+          OPENCLIP_PACKAGE: "git+file:///app/stable-diffusion-webui/repositories/open_clip"
+          ASSETS_REPO: "git+file:///app/stable-diffusion-webui/repositories/stable-diffusion-webui-assets"
+          STABLE_DIFFUSION_REPO: "git+file:///app/stable-diffusion-webui/repositories/stable-diffusion-stability-ai"
+          STABLE_DIFFUSION_XL_REPO: "git+file:///app/stable-diffusion-webui/repositories/generative-models"
+          K_DIFFUSION_REPO: "git+file:///app/stable-diffusion-webui/repositories/k-diffusion"
+          BLIP_REPO: "git+file:///app/stable-diffusion-webui/repositories/BLIP"
 
       - run: docker exec ${{ env.CONTAINER_NAME }} ps aux
 
