--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -358,7 +358,7 @@ jobs:
           docker exec -d ${{ env.CONTAINER_NAME }} mkdir /app/stable-diffusion-webui/.git /app/stable-diffusion-webui/openai
           docker exec -d ${{ env.CONTAINER_NAME }} ln -s /share_nfs/onediff_ci/sd-webui/models/clips/clip-vit-large-patch14 /app/stable-diffusion-webui/openai/clip-vit-large-patch14
           # docker exec -w /app/stable-diffusion-webui -d ${{ env.CONTAINER_NAME }} sh -c "python3 /app/stable-diffusion-webui/webui.py --port 7860 --api --no-download-sd-model --do-not-download-clip --disable-safe-unpickle --ckpt-dir /share_nfs/onediff_ci/sd-webui/models --skip-version-check > /app/stable-diffusion-webui/onediff_webui.log 2>&1"
-          docker exec -w /app/stable-diffusion-webui -e venv_dir=- ${{ env.CONTAINER_NAME }} bash webui.sh --api --no-download-sd-model --do-not-download-clip --skip-version-check --disable-safe-unpickle --ckpt-dir /share_nfs/onediff_ci/sd-webui/models
+          docker exec -w /app/stable-diffusion-webui -e venv_dir=- ${{ env.CONTAINER_NAME }} bash webui.sh -f --api --no-download-sd-model --do-not-download-clip --skip-version-check --disable-safe-unpickle --ckpt-dir /share_nfs/onediff_ci/sd-webui/models
           sleep 300
         env:
           CLIP_PACKAGE: "git+file:///app/stable-diffusion-webui/repositories/CLIP"
