--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -360,7 +360,7 @@ jobs:
           docker exec -w /app/stable-diffusion-webui -d ${{ env.CONTAINER_NAME }} git config --global --add safe.directory /app/stable-diffusion-webui/repositories/BLIP
 
           # docker exec -w /app/stable-diffusion-webui -d ${{ env.CONTAINER_NAME }} sh -c "python3 /app/stable-diffusion-webui/webui.py --port 7860 --api --no-download-sd-model --do-not-download-clip --disable-safe-unpickle --ckpt-dir /share_nfs/onediff_ci/sd-webui/models --skip-version-check > /app/stable-diffusion-webui/onediff_webui.log 2>&1"
-          docker exec -w /app/stable-diffusion-webui -e venv_dir=- ${{ env.CONTAINER_NAME }} bash webui.sh -f --api --no-download-sd-model --do-not-download-clip --skip-version-check --disable-safe-unpickle --ckpt-dir /share_nfs/onediff_ci/sd-webui/models
+          docker exec -w /app/stable-diffusion-webui -e venv_dir=- ${{ env.CONTAINER_NAME }} sh -c "bash webui.sh -f --api --no-download-sd-model --do-not-download-clip --disable-safe-unpickle --ckpt-dir /share_nfs/onediff_ci/sd-webui/models > /app/stable-diffusion-webui/onediff_webui.log 2>&1"
           sleep 300
         env:
           INDEX_URL: "https://pypi.tuna.tsinghua.edu.cn/simple"
