--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -344,7 +344,7 @@ jobs:
           docker exec ${{ env.CONTAINER_NAME }} python3 -m pip install pytorch-lightning gradio==3.41.2 diskcache gitpython pytorch_lightning==1.9.4 scikit-image jsonmerge pillow-avif-plugin torchdiffeq torchsde clean-fid resize-right lark tomesd blendmodes facexlib opencv-python==4.8.0.74 piexif inflection ftfy regex tqdm pydantic==1.10.13
           # docker exec ${{ env.CONTAINER_NAME }} python3 -m pip install -e /app/stable-diffusion-webui/repositories/CLIP
 
-      - name: Start WebUI Web Service
+      - name: Prepare environment
         if: matrix.test-suite == 'webui'
         run: |
           # prepare env for sd-webui
@@ -360,9 +360,9 @@ jobs:
           docker exec -w /app/stable-diffusion-webui -d ${{ env.CONTAINER_NAME }} git config --global --add safe.directory /app/stable-diffusion-webui/repositories/k-diffusion
           docker exec -w /app/stable-diffusion-webui -d ${{ env.CONTAINER_NAME }} git config --global --add safe.directory /app/stable-diffusion-webui/repositories/BLIP
 
+          docker exec -w /app/stable-diffusion-webui -e venv_dir=- ${{ env.CONTAINER_NAME }} sh -c "bash webui.sh -f --exit --api --no-download-sd-model --do-not-download-clip --disable-safe-unpickle --ckpt-dir /share_nfs/onediff_ci/sd-webui/models"
           # docker exec -w /app/stable-diffusion-webui -d ${{ env.CONTAINER_NAME }} sh -c "python3 /app/stable-diffusion-webui/webui.py --port 7860 --api --no-download-sd-model --do-not-download-clip --disable-safe-unpickle --ckpt-dir /share_nfs/onediff_ci/sd-webui/models --skip-version-check > /app/stable-diffusion-webui/onediff_webui.log 2>&1"
-          docker exec -w /app/stable-diffusion-webui -e venv_dir=- ${{ env.CONTAINER_NAME }} sh -c "bash webui.sh -f --api --no-download-sd-model --do-not-download-clip --disable-safe-unpickle --ckpt-dir /share_nfs/onediff_ci/sd-webui/models > /app/stable-diffusion-webui/onediff_webui.log 2>&1"
-          sleep 300
+          # sleep 300
         env:
           INDEX_URL: "https://pypi.tuna.tsinghua.edu.cn/simple"
           CLIP_PACKAGE: "git+file:///app/stable-diffusion-webui/repositories/CLIP"
@@ -378,6 +378,12 @@ jobs:
           STABLE_DIFFUSION_XL_COMMIT_HASH: 45c443b316737a4ab6e40413d7794a7f5657c19f
           K_DIFFUSION_COMMIT_HASH: ab527a9a6d347f364e3d185ba6d714e22d80cb3c
           BLIP_COMMIT_HASH: 48211a1594f1321b00f14c9f7a5b4813144b2fb9
+
+      - name: Start WebUI Web Service
+        if: matrix.test-suite == 'webui'
+        run: |
+          docker exec -w /app/stable-diffusion-webui -d ${{ env.CONTAINER_NAME }} sh -c "python3 /app/stable-diffusion-webui/webui.py --port 7860 --api --no-download-sd-model --do-not-download-clip --disable-safe-unpickle --ckpt-dir /share_nfs/onediff_ci/sd-webui/models --skip-version-check > /app/stable-diffusion-webui/onediff_webui.log 2>&1"
+          sleep 300
 
       - run: docker exec ${{ env.CONTAINER_NAME }} ps aux
 
